--- a/search/arkivskaber.html
+++ b/search/arkivskaber.html
@@ -53,6 +53,9 @@
               <a class="nav-link" href="../index.html">Eksemplar</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/index.html">Magasinenhed</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../index.html">Opgave</a>
             </li>
           </ul>
